1) save api key in context.globalState 2) add apikey input field, save button and clear button 3) add <code> tag for response based code snippets

--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
         "command": "vscode-chat-gpt.start",
         "title": "Ask to ChatGpt"
       }
+    ],
+    "webviews": [
+      {
+        "viewType": "markdown.preview",
+        "icon": {
+          "light": "./out/chat-gpt-logo-2-HBRQ6ZBV.jpeg",
+          "dark": "./out/chat-gpt-logo-2-HBRQ6ZBV.jpeg"
+        }
+      }
     ]
   },
   "scripts": {
