--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscode-chat-gpt",
   "displayName": "vscode-chat-gpt",
   "description": "Extension is a chat bot that uses ChatGpt Api.",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "publisher": "ikasann-self",
   "bugs": {
     "url": "https://github.com/ismailkasan/chat-gpt-vscode-extension/issues",
@@ -37,35 +37,36 @@
   "main": "./out/extension.js",
   "contributes": {
     "viewsContainers": {
-			"activitybar": [
-				{
-					"id": "chat-gpt-view",
-					"title": "Chat Gpt",
-					"icon": "src/images/activity-bar-logo.svg"
-				}
-			]
-		},
+      "activitybar": [
+        {
+          "id": "chat-gpt-view",
+          "title": "Chat Gpt",
+          "icon": "./out/media/activity-bar-logo.svg"
+        }
+      ]
+    },
     "views": {
-			"chat-gpt-view": [
-				{
-					"id": "chat-gpt-view-id",
-					"name": "Chat Gpt View",
-					"icon": "src/images/activity-bar-logo.svg",
-					"contextualTitle": "Chat Gpt view-2"
-				}
-			]		
-		},
-    "viewsWelcome": [
-      {
-        "view": "chat-gpt-view-id",
-        "contents": "More information about OpenAi and ChatGpt [please visit](https://openai.com/).\n[Open Chat Editor](command:vscode-chat-gpt.start)"
-      }
-    ],
+      "chat-gpt-view": [
+        {
+          "type": "webview",
+          "id": "chat-gpt-view-id",
+          "name": "Chat Panel"
+        }
+      ]
+    },
     "commands": [
       {
         "command": "vscode-chat-gpt.start",
         "title": "Ask to ChatGpt"
-      }
+      },
+      {
+				"command": "vscode-chat-gpt.addQuestion",
+				"title": "Add Question"
+			},
+      {
+				"command": "vscode-chat-gpt.clickedHistoryQuestion",
+				"title": "Clicked History Question"
+			}
     ],
     "webviews": [
       {
@@ -96,6 +97,7 @@
     "@typescript-eslint/parser": "^5.56.0",
     "@vscode/test-electron": "^2.3.0",
     "esbuild": "^0.16.17",
+    "esbuild-copy-static-files": "^0.1.0",
     "eslint": "^8.36.0",
     "glob": "^8.1.0",
     "mocha": "^10.2.0",
