--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,11 +9,11 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "@typescript-eslint/naming-convention": "warn",
-        "@typescript-eslint/semi": "warn",
-        "curly": "warn",
-        "eqeqeq": "warn",
-        "no-throw-literal": "warn",
+        "@typescript-eslint/naming-convention": "off",
+        "@typescript-eslint/semi": "off",
+        "curly": "off",
+        "eqeqeq": "off",
+        "no-throw-literal": "off",
         "semi": "off"
     },
     "ignorePatterns": [
